Entries can now be added

--- a/addentry/templates/view.html
+++ b/addentry/templates/view.html
@@ -1,1 +1,8 @@
-{{p}}
+<ul>
+    <li \>Physician: {{p.npi}}
+    <li \>Board Cert: {{p.board_cert}}
+    <li \>Age: {{p.age}}
+    <li \>Language: {{p.langauge}}
+    <li \>Location: {{p.location}}
+    <li \>Rating: {{p.rating}}
+</ul>
