--- a/addentry/templates/entry.html
+++ b/addentry/templates/entry.html
@@ -1,6 +1,9 @@
+{% extends "main.html" %}
+{% block content %}
 {% if error %}<p><strong>{{ error }}</strong></p>{% endif %}
 <form class="" action="{% url 'submit' %}" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="submit" id="">
 </form>
+{% endblock %}
