--- a/addentry/templates/view.html
+++ b/addentry/templates/view.html
@@ -1,7 +1,8 @@
 {% extends "main.html" %}
 {% block content %}
+<h1>Physician View</h1>
 <ul>
-    <li \>Physician: {{p.npi}}
+    <li \>NPI: {{p.npi}}
     <li \>Board Cert: {{p.board_cert}}
     <li \>Age: {{p.age}}
     <li \>Language: {{p.langauge}}
