--- a/addentry/templates/main.html
+++ b/addentry/templates/main.html
@@ -26,7 +26,8 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="{% static "images/favicon.png" %}">
-
+  {% block head %}
+  {% endblock %}
 </head>
 <body>
 
