rule editor can now load existing rules

--- a/addentry/templates/newRule.html
+++ b/addentry/templates/newRule.html
@@ -4,6 +4,112 @@
 <script src="{% static "lib/vendor/jquery.js" %}" charset="utf-8"></script>
 <script src="{% static "lib/business-rules/conditions-builder.js" %}" charset="utf-8"></script>
 <script src="{% static "lib/business-rules/actions-builder.js" %}" charset="utf-8"></script>
+<link rel="stylesheet" href="{% static "css/rules.css" %}" />
+<script charset="utf-8">
+    var conditions, actions, nameField, ageField, occupationField, submit, allData;
+(function($) {
+  var occupationOptions = [ "Software Engineer", "Biz Dev", "Marketing" ];
+
+  function getInitialData(jsonData) {
+    return {"variables": [
+            { "name": "expiration_days",
+              "label": "Days until expiration",
+              "field_type": "numeric",
+              "options": []},
+            { "name": "current_month",
+              "label": "Current Month",
+              "field_type": "string",
+              "options": []},
+            { "name": "goes_well_with",
+              "label": "Goes Well With",
+              "field_type": "select",
+              "options": ["Eggnog", "Cookies", "Beef Jerkey"]}
+                        ],
+          "actions": [
+            { "name": "put_on_sale",
+              "label": "Put On Sale",
+              "params": [{name: "sale_percentage", label: "Sale Percentage", fieldType : "numeric"}]},
+            { "name": "order_more",
+              "label": "Order More",
+              "params": [{name: "number_to_order", label: "Number To Order", fieldType : "numeric"}]}
+          ],
+          "variable_type_operators": {
+            "numeric": [ {"name": "equal_to",
+                          "label": "Equal To",
+                          "input_type": "numeric"},
+                         {"name": "less_than",
+                          "label": "Less Than",
+                          "input_type": "numeric"},
+                         {"name": "greater_than",
+                          "label": "Greater Than",
+                          "input_type": "numeric"}],
+            "string": [ { "name": "equal_to",
+                          "label": "Equal To",
+                          "input_type": "text"},
+                        { "name": "non_empty",
+                          "label": "Non Empty",
+                          "input_type": "none"}],
+            "select": [ { "name": "contains",
+                          "label": "Contains",
+                          "input_type": "select"},
+                        { "name": "does_not_contain",
+                          "label": "Does Not Contain",
+                          "input_type": "select"}]
+          },
+          "data": jsonData,
+    };
+  };
+
+  function onReady() {
+    conditions = $("#conditions");
+    actions = $("#actions");
+    nameField = $("#nameField");
+    occupationField = $("#occupationField");
+    ageField = $("#ageField");
+    submit = $("#submit");
+    textField = $("#textField")
+    try {
+        text = JSON.parse(textField.text());
+    }
+    catch(exception) {
+        text = {}
+    }
+    condData = getInitialData(text["Conditions"]);
+    actData = getInitialData(text["Actions"]);
+    initializeConditions(condData);
+    initializeActions(actData);
+    initializeForm();
+  }
+
+  function initializeConditions(data) {
+    conditions.conditionsBuilder(data)
+  }
+
+  function initializeActions(data) {
+    actions.actionsBuilder(data);
+  }
+
+  function initializeForm() {
+    for(var i=0; i < occupationOptions.length; i++) {
+      var o = occupationOptions[i];
+      occupationField.append($("<option>", {value: o.name, text: o.label}));
+    }
+
+    submit.click(function(e) {
+      e.preventDefault();
+      var cond = conditions.conditionsBuilder("data");
+      var act = actions.actionsBuilder("data");
+      var json = {
+        "Conditions": cond,
+        "Actions": act
+      }
+      console.log(JSON.stringify(json));
+      textField.text(JSON.stringify(json));
+    });
+  }
+  $(onReady);
+})(jQuery);
+</script>
 {% endblock %}
 {% block content %}
 <h1>Rule Editor</h1>
@@ -16,6 +122,7 @@
 
     <h3>Do these actions...</h3>
     <div id="actions"></div>
+    <p><button id="submit" class="button-primary">Generate Rule Data</button></p>
 <input type="submit" value="submit" id="">
 </form>
 {% endblock %}
