rules engine running

--- a/addentry/templates/main.html
+++ b/addentry/templates/main.html
@@ -34,6 +34,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <a href={% url 'index' %}>Home</a>
     {% block content %}{% endblock %}   
   </div>
 
