--- a/addentry/templates/view.html
+++ b/addentry/templates/view.html
@@ -24,6 +24,6 @@
     </div>
 </div>
 <center>
-    <a class="button button-primary" href="{}">Run rules-engine</a>
+    <a class="button button-primary" href="{% url 'run' p.npi %}">Run rules-engine</a>
 </center>
 {% endblock %}
