--- a/addentry/templates/ruleList.html
+++ b/addentry/templates/ruleList.html
@@ -1,6 +1,13 @@
 {% extends "main.html" %}
 {% block content %}
 <h1>Rules</h1>
+<ul>
+    {% for r in object_list %}
+    <li><a href="{% url 'edit-rule' r.id %}">{{ r.name }}</a></li>
+    {% empty %}
+    <li>No rules yet!</li>
+    {% endfor %}
+</ul>
 <center>
     <a class="button button-primary" href="{% url 'new-rule' %}">Add new Rule</a>
 </center>
